<resources>
    <string name="app_name">Waslak</string>
    <string name="stores">Stores</string>
    <string name="order">Order</string>
    <string name="notifications">Notifications</string>
    <string name="me">Me</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile (+201144352683)</string>
    <string name="birth_date">Birth Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="open_chat">Open Chat</string>
    <string name="setting">Setting</string>
    <string name="dummy_username" translatable="false">Mohamed Abdel Halim</string>
    <string name="dummy_credits_number" translatable="false">300</string>
    <string name="credits">Balance</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="add">Add</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="login_instagram">Login with Instagram</string>
    <string name="login_phone">Login with your Phone</string>
    <string name="sign_up_facebook">Sign Up with Facebook</string>
    <string name="sign_up_google">Sign Up with Google</string>
    <string name="sign_up_instagram">Sign Up with Instagram</string>
    <string name="sign_up_phone">Sign Up with your Phone</string>
    <string name="or">Or</string>
    <string name="in_my_way"><u>In my way to Store</u></string>
    <string name="choose_language" translatable="false">Choose Language</string>
    <string name="choose_language_arabic" translatable="false">اختر اللغة</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="no_orders">There are No Order</string>
    <string name="dummy_text" translatable="false">Gillette Venus Breeze</string>
    <string name="dummy_text_2" translatable="false">Features Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data Number</string>
    <string name="dummy_text_7" translatable="false">Features Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data Number\n\nFeatures Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data NumberFeatures Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data NumberFeatures Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data NumberFeatures Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data NumberFeatures Gentle tweezing disc Unique epilation discs 2\nspeed settings Washable epilation head ergonomic grip Accessories Opti-start cap:with message element\nCleaning brush Convenient pouch\nTechnical data Number</string>
    <string name="my_check_in_list">My check-in list</string>
    <string name="notification_tone">Notification tone</string>
    <string name="complaints">Complaints</string>
    <string name="dummy_text_3"><b>Approved</b></string>
    <string name="dummy_text_5"><b>Delivered Within</b></string>
    <string name="dummy_text_6" translatable="false"><b>Order by</b> Mohamed Ali</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="how_to_be_agent">How to be an agent</string>
    <string name="app_tour">App tour</string>
    <string name="language">Language</string>
    <string name="hello_mohamed" translatable="false">Hello\nMohamed</string>
    <string name="my_balance">My Balance</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="search">Search</string>
    <string name="store_name">Store Name</string>
    <string name="store_distance" translatable="false">0.28 Km Away</string>
    <string name="shop_info">Shop Info</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="iam_courier">I\'m a Courier</string>
    <string name="number_of_couriers">0 Couriers In</string>
    <string name="number_of_couriers_1">1 Couriers In</string>
    <string name="show_on_map">View in Map</string>
    <string name="store">Store</string>
    <string name="customer">Customer</string>
    <string name="order_now">Order Now</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">If you are Not Registered</string>
    <string name="register">Register</string>
    <string name="facebook_app_id" translatable="false">535071836917528</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb535071836917528</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="verify">Verify</string>
    <string name="enter_phone">Enter You Phone Number</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="send_code">Send Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="submitted">Submitted</string>
    <string name="type_message">Type message</string>
    <string name="ready_to_deliver">I am Ready to Deliver</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="store_location">Store Location</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_cost">Delivery Cost :</string>
    <string name="paste_url">Paste google url</string>
    <string name="paste">Paste</string>
    <string name="floor_number">Floor/Apartment No./House No.</string>
    <string name="advertisement">Advertisement</string>
    <string name="advertisement_others">Advertisement, Offers, Others</string>
    <string name="new_orders">New Orders Notifications</string>
    <string name="nearest_orders">Nearest Orders Notifications</string>
    <string name="your_nearest">Your Nearest Stores Orders Notifications</string>
    <string name="choose_delivery_location">Choose Delivery Location</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="choose_delivery_time">Delivery time will be estimated automatically according to your area</string>
    <string name="estimated_price">Price will be estimated automatically according</string>
    <string name="order_description">Write here the details of your order, for example: i want 1 Cheeseburger, and 1 Large Fries. Please write also how much is the approximate cost of your order</string>
    <string name="not_verified_account">Not Verified Account</string>
    <string name="number_of_orders">Number of Orders</string>
    <string name="customer_comments">Customer Comments</string>
    <string name="not_verified">Not Verified</string>
    <string name="duration">Duration : </string>
    <string name="distance">Distance : </string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="welcome_to">Welcome to</string>
    <string name="slogan_here">Waslak… Serve you wherever you are</string>
    <string name="text1">• Waslak .......  We Make it easier for you to shop and order from anywhere easily through a unique application</string>
    <string name="text2">• With one click select whatever you want</string>
    <string name="text3">• Delivery location is automatically determined by Maps or you can add delivery location</string>
    <string name="text4">• Wherever You Go  order  for what you want at the moment</string>
    <string name="text5">• Special offers and discounts only with your Waslak\n</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="another_request">Another Request</string>
    <string name="comments">Feedback</string>
    <string name="orders">Orders</string>
    <string name="log_out">Log out</string>
    <string name="all_stores">All Stores</string>
    <string name="nearby">Nearby</string>
    <string name="active">Active</string>
    <string name="delivered_by">Delivered By : </string>
    <string name="accepted">Accepted</string>
    <string name="delivered_within">Delivered Within : </string>
    <string name="approved">Approved</string>
    <string name="shop_name">Shop Name : </string>
    <string name="my_orders">My Orders</string>
    <string name="customer_orders">Customer Orders</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="registered_before">Registered before.Please log in</string>
    <string name="error">Error Please Try Again</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_birth_date">Enter your Birth Date</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_gender">Enter your Gender</string>
    <string name="insert_your_photo">Insert your Photo</string>
    <string name="uploading_photo">Uploading Photo</string>
    <string name="cannot_be_deleted">Cannot be Deleted</string>
    <string name="order_id">Order Id</string>
    <string name="loading">Loading</string>
    <string name="no_check_in_list">No Check In List</string>
    <string name="km">KM</string>
    <string name="enter_your_price">Enter Your Price</string>
    <string name="min_price_is">Min Price is : </string>
    <string name="max_price_is">Max Price is :</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="blocked">Blocked</string>
    <string name="hello">Hello</string>
    <string name="not_verified_mobile">Not Verified</string>
    <string name="exit_app">Do you want to exit waslak?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blocked_device">Blocked device</string>
    <string name="error_in_phone">Error in phone number</string>
    <string name="notification_setting">Notifications Settings</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="enter_your_duration">Enter your duration</string>
    <string name="select_time">Select Time</string>
    <string name="cancel">Cancel</string>
    <string name="one_hour">1 Hour</string>
    <string name="two_hour">2 Hour</string>
    <string name="three_hour">3 Hour</string>
    <string name="one_day">1 Day</string>
    <string name="two_day">2 Day</string>
    <string name="three_day">3 Day</string>
    <string name="not_located">Not located</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="no_matching_stores">No Matching Stores</string>
    <string name="be_courier">Be a Courier!</string>
    <string name="cancel_courier">Cancel Registration!</string>
    <string name="be_courier_description">If you want to be a courier in waslak for this store click yes?</string>
    <string name="about_us">About Us</string>
</resources>