<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    tools:context=".UserFragment">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fillViewport="true"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            tools:context=".LanguageActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/delivery_cost"
                    android:src="@drawable/im_logo_pink"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="35dp"
                    android:text="@string/choose_language"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/choose_language_arabic"/>


                <Button
                    android:layout_width="240dp"
                    android:id="@+id/arabic_language"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/arabic"
                    android:textAllCaps="false"
                    android:textColor="@color/whiteColor" />


                <Button
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_orange_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/english"
                    android:id="@+id/english_language"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />


            </LinearLayout>


        </ScrollView>
    </FrameLayout>
</RelativeLayout>