<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor">


    <include
        layout="@layout/app_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_centerInParent="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            tools:context=".OrderDetailsActivity"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="@drawable/im_background">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/in_my_way"
                        android:src="@drawable/im_logo_pink" />

                </FrameLayout>


                <TextView
                    android:id="@+id/nav_my_check_in_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingTop="15dp"
                    android:paddingRight="50dp"
                    android:text="@string/my_check_in_list"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    android:background="#B0B1B6" />

                <TextView
                    android:id="@+id/notification_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/notification_tone"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    android:background="#B0B1B6" />

                <TextView
                    android:id="@+id/complaints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/complaints"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    android:background="#B0B1B6" />

                <TextView
                    android:id="@+id/language_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/language"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    android:background="#B0B1B6" />


                <Switch
                    android:id="@+id/notification_setting_enable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:checked="true"
                    android:text="@string/notifications"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPrimary"
                    android:drawableStart="@drawable/ic_help"
                    android:drawableLeft="@drawable/ic_help"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/help"
                    android:textColor="@color/whiteColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/how_to_be"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/how_to_be_agent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    android:background="#B0B1B6" />


                <TextView
                    android:id="@+id/app_tour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/app_tour"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="15dp"
                    android:background="#B0B1B6" />


            </LinearLayout>

        </ScrollView>
    </FrameLayout>
</RelativeLayout>