<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    tools:context=".OrderDetailsActivity">


    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_centerInParent="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fillViewport="true"
            tools:context=".OrderDetailsActivity"
            tools:ignore="UselessParent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/dummy_text_2"
                        android:textColor="#434343"
                        android:textSize="12sp" />


                    <FrameLayout
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/ic_cost_coupon">

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            tools:text="Cost : 30 Dinar" />

                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/dummy_text_3"
                        android:textColor="#434343"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/expire_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text_5"
                        android:textColor="#434343"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/delivery_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_text_6"
                        android:textColor="#434343"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/delivery_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="@string/in_my_way" />

                </LinearLayout>

                <fragment
                    android:id="@+id/map"
                    android:layout_marginTop="20dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:context=".OrderDetailsActivity" />

                <Button
                    android:id="@+id/save_register"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/open_chat"
                    android:textAllCaps="false"
                    android:textColor="@color/whiteColor" />


            </LinearLayout>

        </ScrollView>
    </FrameLayout>
</RelativeLayout>
