<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_background"
    tools:context=".UserFragment">


    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar"
        android:layout_centerInParent="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fillViewport="true"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            tools:context=".AddCouponFragment"
            tools:ignore="UselessParent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/me"
                    android:src="@drawable/im_add_coupon" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/add_coupon"
                    android:textAlignment="center"
                    android:textColor="@color/whiteColor"
                    android:textSize="18sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/coupon"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/coupon_code"
                    android:inputType="textPersonName"
                    android:paddingBottom="12.5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="15sp"
                    android:paddingTop="12.5dp"
                    android:textColor="@color/whiteColor"
                    android:textColorHint="@color/whiteColor" />


                <Button
                    android:layout_width="130dp"
                    android:layout_height="33dp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:id="@+id/add_coupon"
                    android:foreground="?attr/selectableItemBackground"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/whiteColor"
                    android:background="@drawable/bg_button"/>

            </LinearLayout>


        </ScrollView>

    </FrameLayout>
</RelativeLayout>